<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.christianquintero.app4.modulo4">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/are"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/grupo">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuadrado"
                android:textSize="15dp"
                android:id="@+id/cua"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangulo"
                android:textSize="15dp"
                android:id="@+id/tri"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rectangulo"
                android:textSize="15dp"
                android:id="@+id/rec"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/circulo"
                android:textSize="15dp"
                android:id="@+id/cir"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aCuadrado"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:id="@+id/tv1"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:hint="@string/l"
                    android:visibility="gone"
                    android:id="@+id/et1"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/aTrinagulo"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:id="@+id/tv2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aRectangulo"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:id="@+id/tv3" />
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:hint="@string/b"
                    android:visibility="gone"
                    android:id="@+id/et3"
                    android:inputType="number"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:hint="@string/a"
                    android:visibility="gone"
                    android:id="@+id/et3_1"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aCirculo"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:id="@+id/tv4"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:hint="@string/r"
                    android:visibility="gone"
                    android:id="@+id/et4"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:id="@+id/resul"
                    android:gravity="center"
                    android:textColor="@color/Coral"
                    android:textSize="20dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal"
                    android:textSize="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:onClick="calculo"/>
            </LinearLayout>

    </LinearLayout>



</LinearLayout>
